# prx

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  Makefile  README.md  build.rs  deny.toml  issues.md
.github/workflows/: benchmark.yml  ci.yml  deploy-docs.yml  distill-models.yml  release.yml
benches/: chunking.rs  search.rs
benchmarks/: ndcg_dataset.json  ndcg_dataset_fiddler.json  repos.json
benchmarks/repos/: cargo.json  django.json  fastify.json  flask.json  kafka.json  ripgrep.json  terraform.json  vscode.json
benchmarks/results/: v0.5.7-baseline.json
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/architecture/: fallback.md  overview.md  run-parsers.md  search.md
book/src/commands/: context.md  diff.md  edit.md  exists.md  find.md  impact.md  index.md  other.md  outline.md  read.md  run.md  search.md
book/src/contributing/: dependencies.md  guidelines.md  setup.md
book/src/guide/: installation.md  integration.md  quickstart.md  token-savings.md
book/src/performance/: benchmarks.md  indexing.md  search-quality.md
book/src/reference/: cli.md  landscape.md  output.md  platforms.md
book/src/vision/: prd.md  roadmap.md
book/theme/: custom.css
docs/: CONTRIBUTING.md  USAGE.md
docs/architecture/: SEARCH.md  SYSTEM.md
docs/design/: BENCHMARKS.md  CLI.md  CRATE-REFERENCE.md  FALLBACK.md  GIT-WORKFLOW.md  IMPLEMENTATION.md  LEAN-DOWN.md  MDBOOK-PLAN.md  MODEL-TIERING.md  OUTPUT.md  PRX-RUN-DESIGN.md  PRX-RUN.md  RUN-PARSERS.md  SEARCH-QUALITY.md  SYSTEM-DESIGN.md  TESTING.md  V050-PLAN.md
docs/internal/: PATCH-PLAN.md  SEARCH-QUALITY.md
docs/research/: LANDSCAPE.md  PLATFORM.md  TELEMETRY-FINDINGS.md
docs/vision/: PRD.md  ROADMAP.md
packaging/homebrew/: prx.rb
scripts/: distill_eval_models.py  distill_model.py  download-models.sh  install-hooks.sh  run_model_eval.py
skills/: agents.md
src/: budget.rs  fallback.rs  git.rs  hash.rs  lib.rs  main.rs  models.rs  output.rs  tokens.rs  walk.rs  workspace.rs
src/chunking/: mod.rs  treesitter.rs
src/commands/: batch.rs  bench.rs  bench_ndcg.rs  context.rs  diff.rs  edit.rs  exists.rs  explain.rs  find.rs  impact.rs  index.rs  init.rs  mcp.rs  mod.rs  outline.rs  read.rs  rename.rs  run.rs  search.rs  stats.rs
src/index/: dense.rs  mod.rs  persist.rs  sparse.rs
src/parsing/: imports.rs  languages.rs  mod.rs  outline.rs  snap.rs  strip.rs
src/ranking/: boosting.rs  mod.rs  penalties.rs  proximity.rs
src/runner/: cargo_build.rs  cargo_llvm_cov.rs  cargo_test.rs  docker_build.rs  dotnet.rs  eslint.rs  fallback.rs  git_log.rs  go_cover.rs  go_test.rs  gradle.rs  jest.rs  jest_cov.rs  kubectl.rs  kubectl_logs.rs  mod.rs  mvn.rs  mypy.rs  npm_ls.rs  pytest.rs  pytest_cov.rs  terraform.rs  tsc.rs
src/search/: fusion.rs  graph.rs  mod.rs  structural.rs  symbols.rs  tokenize.rs
tests/: e2e.rs  mcp_e2e.rs  ndcg.rs
tests/helpers/: mod.rs
